@@ -17,11 +17,7 @@ if !EVAS_STATIC_BUILD_SVG
 pkgdir = $(libdir)/evas/modules/loaders/svg/$(MODULE_ARCH)
 pkg_LTLIBRARIES = module.la
 
-if BUILD_LOADER_SVG_ESVG
 module_la_SOURCES = evas_image_load_esvg.c
-else
-module_la_SOURCES = evas_image_load_rsvg.c
-endif
 
 module_la_LIBADD = @EINA_LIBS@ @evas_image_loader_svg_libs@ $(top_builddir)/src/lib/libevas.la
 module_la_LDFLAGS = -no-undefined @lt_enable_auto_import@ -module -avoid-version
@@ -30,11 +26,7 @@ module_la_LIBTOOLFLAGS = --tag=disable-static
 else
 
 noinst_LTLIBRARIES = libevas_loader_svg.la
-if BUILD_LOADER_SVG_ESVG
 libevas_loader_svg_la_SOURCES = evas_image_load_esvg.c
-else
-libevas_loader_svg_la_SOURCES = evas_image_load_rsvg.c
-endif
 libevas_loader_svg_la_LIBADD = @evas_image_loader_svg_libs@
 
 endif
