@@ -13,6 +13,7 @@ Fixes:
 
 Removal:
    * Remove EVAS_FRAME_QUEUING, EVAS_SLI, METRIC_CACHE and WORD_CACHE.
+   * Remove librsvg svg loader (If you want to use it, use the evas_generic_loader variant).
 
 Evas 1.2.0
 
