@@ -737,13 +737,18 @@
         * Fix pixman rendering support if you set alpha flag AFTER
         setting image size for custom image data.
 
-2012-05-14 Sanghee Park
+2012-05-14  Sanghee Park
 
 	* Add Multisample Anti-Anliased surface format for Evas GL.
         The formats are divided into High, Med, Low, None, where High represent
         max number of samples.  Currently, this feature is only supported in GLES2
         environment with GL_IMG_multisampled_render_to_texture extension supported.
 
-2012-05-16 Vincent Torri
+2012-05-16  Vincent Torri
 
 	* Use Esvg for svg rendering. If not found, librsvg is still used.
+
+2012-05-18  Cedric Bail
+
+	* Remove librsvg svg loader as it is a massive source of crash in e17. If
+	you still want to use it, use the evas_generic_loader librsvg binary.
